# internal/gen/api/editor/v1/pack.pb.validate.go
@@ -241,111 +241,6 @@ var _ interface {
 	ErrorName() string
 } = ListPackTagsResponseValidationError{}
 
-// Validate checks the field values on PackRound with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *PackRound) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on PackRound with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in PackRoundMultiError, or nil
-// if none found.
-func (m *PackRound) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *PackRound) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for Id
-
-	// no validation rules for Name
-
-	// no validation rules for Position
-
-	if len(errors) > 0 {
-		return PackRoundMultiError(errors)
-	}
-
-	return nil
-}
-
-// PackRoundMultiError is an error wrapping multiple validation errors returned
-// by PackRound.ValidateAll() if the designated constraints aren't met.
-type PackRoundMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m PackRoundMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m PackRoundMultiError) AllErrors() []error { return m }
-
-// PackRoundValidationError is the validation error returned by
-// PackRound.Validate if the designated constraints aren't met.
-type PackRoundValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e PackRoundValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e PackRoundValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e PackRoundValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e PackRoundValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e PackRoundValidationError) ErrorName() string { return "PackRoundValidationError" }
-
-// Error satisfies the builtin error interface
-func (e PackRoundValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sPackRound.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = PackRoundValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = PackRoundValidationError{}
-
 // Validate checks the field values on Pack with the rules defined in the proto
 // definition for this message. If any rules are violated, the first error
 // encountered is returned, or nil if there are no violations.
